# Oracle-OOC-Checker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: check-capacity.yml
docs/: iphone-setup.md
src/ooc_checker/: __init__.py  checker.py  cli.py  config.py  models.py  notify.py  setup_wizard.py
tests/: test_checker.py  test_cli.py  test_config.py  test_notify.py  test_setup_wizard.py
